2009-04-24 Maxim
- FIX:/UI/Vision: Condition of the orientation angle is added to the repainting the widget when its geometry is changed for primitive ElFigure.
- FIX:/UI/Vision: Processing the "fill" elements with the empty path is corrected for primitive ElFigure.
- FIX:/UI/Vision: Selecting the rect of one of the figures, selected by means of CTRL+A, is denied for primitive ElFigure.


2009-04-21 Roman
- !!:/SYS/TCntrNode: Child's groups container is made dynamic, for memory consumption is optimisation.
- !!:/UI/VCAEngine: Attributes storing into widget is changed to direct object "Attr" storing into TCntrNode container.
- !!!!:/UI/VCAEngine: Attributes description object TFld is made inherited from inherited attribute.
- FIX:/UI/VCAEngine: The permition to new crated session by user is fixed.
- /Archive/DBArch: DB present and enable checking is added


2009-04-17 Roman
- FIX:/UI: To QT 4.5 adaptation is made. Set environment LC_NUMERIC=C for float dot separator always process.
- !!!!:/SYS/Resource: For read-write resources used POSIX functions pthread_rwlock_*() and Res object API some changed.
- !!:/SYS/TCntrNode: Connect/disconnect counter resource is made common for all objects by mutex. Memory consumption is optimised.
- !!:/SYS: The nodeRes() function of TCntrNode redefined for all used it objects.


2009-04-17 Maxim
- FIX:/UI/Vision: Repainting the widget when its geometry is changed is modified for primitive ElFigure.


2009-04-16 Roman
- !!!!:/DAQ/Transport: Module is renamed to DAQGate.
- /DAQ/ModBus: Delay connection time is displayed in state field on time connection error.
- !!:/DemoDB: Russian DB is updated for DAQ.ModBus changes and DAQ.Transport to DAQ.DAQGate renaming.


2009-04-15 Roman
- /DAQ/ModBus: Gather controller's time is moved to status string. Connection try config parameter is renamed to request try.
- /DAQ/ModBus: Disabling controller on config parameter "Fragments merging" changing is made.